<resources>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_bold">sans-serif-bold</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="app_name">T-nect</string>
    <string name="objects">Projects</string>
    <string name="favorites">Favorites</string>
    <string name="picture">Snapshots</string>
    <string name="settings">Settings</string>
    <string name="change">Edit</string>
    <string name="apply">Apply</string>
    <string name="text_smart">True</string>
    <string name="text_ip">IP</string>
    <string name="text_flat_number">Apartment number</string>
    <string name="text_activation_code">Activation code</string>
    <string name="text_login">Log In</string>
    <string name="text_configure_locally">Manual configuration</string>
    <string name="panels">Panels</string>
    <string name="cameras">Cameras</string>
    <string name="text_save">SAVE</string>
    <string name="text_logout">REMOVE</string>
    <string name="text_logout_dialog_message">Are you sure you want to remove the project?</string>
    <string name="text_delete_object">Removing the project will remove all attached devices</string>
    <string name="text_delete_device">Do you want to remove the object?</string>
    <string name="text_delete_snapshot">Do you want to remove the snapshot?</string>
    <string name="text_delete_dialog_title">The removal</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="text_create_new_object">Creating a new project</string>
    <string name="text_edit_object">Project settings</string>
    <string name="text_naming">Name</string>
    <string name="text_settings">Settings</string>
    <string name="text_ip_address_server">Server Address</string>
    <string name="text_server_port">Server port</string>
    <string name="text_own_sip_num">SIP number</string>
    <string name="text_concierge_num">Concierge number</string>
    <string name="text_concierge">Concierge</string>
    <string name="text_add">ADD</string>
    <string name="text_photo_by_default">Default image</string>
    <string name="text_add_new_device">A new device adding</string>
    <string name="text_edit_device">Device configuration changing</string>
    <string name="text_type_device">Device type</string>
    <string name="text_ip_call_panel">IP panel</string>
    <string name="text_ip_camera_panel">IP camera</string>
    <string name="text_additional_necklace">Additional relay</string>
    <string name="text_photo">Image</string>
    <string name="text_auth_on_device">Device authorization</string>
    <string name="text_sip_number_panel">Panel SIP number</string>
    <string name="text_rtsp_link">RTSP link</string>
    <string name="text_open_door">A door opening</string>
    <string name="text_locally">Local</string>
    <string name="text_hlm">T-nect</string>
    <string name="text_http_prefix">http://</string>
    <string name="text_office">My office</string>
    <string name="text_entrance_door">Entrance door</string>
    <string name="text_need_enter_all_settings">All settings must be specified</string>
    <string name="text_object_same_data">A project with such ip address and sip number already exists</string>
    <string name="text_object_same_sip_number">A project with this SIP number already exists</string>
    <string name="text_lock_1">Lock 1</string>
    <string name="text_picture">Snapshot</string>
    <string name="text_lock_2">Lock 2</string>
    <string name="text_rtsp_hint">rtsp://&lt;url&gt;</string>
    <string name="text_microphone">Microphone</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_decline">Decline</string>
    <string name="text_dynamic">Dynamic</string>
    <string name="text_pick_type_object">Choose a project type</string>
    <string name="text_add_object_hlm">Add T-nect project</string>
    <string name="text_add_local_object">Add local project</string>
    <string name="text_configure_project">Configure T-nect project</string>
    <string name="text_enter">LOG IN</string>
    <string name="text_delete">Remove</string>
    <string name="login_number_text_error">%sThe apartment number consists of digits and letters only</string>
    <string name="login_number_not_complete">%sThe activation code is entered not completely</string>
    <string name="login_code_text_error">%sThe code consists of number and Latin letters</string>
    <string name="login_number_text_error_empty">%sThe apartment number is not specified</string>
    <string name="login_code_text_error_empty">%sThe activation code is not specified</string>
    <string name="hlm">T-nect</string>
    <string name="call_video">Video at call</string>
    <string name="calls">Calls</string>
    <string name="text_full_rtsp_link">Full RTSP link</string>
    <string name="text_rtsp">RTSP link</string>
    <string name="text_login_en">Login</string>
    <string name="actionNext">actionNext</string>
    <string name="actionDone">actionDone</string>
    <string name="text_max_account_limit_has_been_reached">The maximum number of projects has been reached.</string>
    <string name="text_admin">admin</string>
    <string name="text_password">Password</string>
    <string name="text_ip_address">Address</string>
    <string name="text_port">Port</string>
    <string name="hint_554">554</string>
    <string name="hint_192_168_1_10">192.168.1.10</string>
    <string name="text_enter_door">Entrance</string>
    <string name="text_answer">Answer</string>
    <string name="text_make_call">Call</string>
    <string name="text_dtmf_1">DTMF 1:</string>
    <string name="text_dtmf_2">DTMF 2:</string>
    <string name="dafault_port">5060</string>
    <string name="version_app">Version:</string>
    <string name="about">About</string>
    <string name="can_not_handle_calls">No permission to handle calls</string>
    <string name="text_error_file_not_found">File not found.</string>
    <string name="text_error_cant_delete_file">"Can't delete file."</string>
    <string name="text_prepare_video">Video preparing...</string>
    <string name="text_video_disabled">The video is disabled</string>
    <string name="text_error_dialog_title">Error</string>
    <string name="text_warning_dialog_title">Warning</string>
    <string name="text_error_default_message">Unknown error</string>
    <string name="text_error_panel_not_callable">The call is n/a.</string>
    <string name="text_error_object_exists">A project with such apartment number and activation code already exists</string>
    <string name="text_attach_photo">Take a picture</string>
    <string name="text_toast_saving">Saving...</string>
    <string name="text_toast_saved">The snapshot is saved</string>
    <string name="requests">Services</string>
    <string name="requests_active">Active</string>
    <string name="requests_completed">Finished</string>
    <string name="quizzes">Voting</string>
    <string name="percent_template">%d%%</string>
    <string name="text_quiz">Voting</string>
    <string name="text_free_answer_option">Detailed response</string>
    <string name="quizzes_passed">Completed</string>
    <string name="quizzes_not_passed">Active</string>
    <string name="unknown_date">Unknown date</string>
    <string name="status_new">New</string>
    <string name="status_in_work">In the process</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_done">Completed</string>
    <string name="text_new_announce">New</string>
    <string name="text_object_without_sip">The project was created without a SIP number. Contact the concierge for more details.</string>
    <string name="text_api_token_expired">Devices are unavailable, your activation is invalid. Contact the concierge for more details.</string>
    <string name="text_call_failed_panel">Cannot connect to the panel %s. Check your network connection.</string>
    <string name="text_call_failed_panel_rejected">The line is busy.</string>
    <string name="text_call_concierge_failed">The line is busy.</string>
    <string name="text_refresh_devices">Refresh</string>
    <string name="text_refresh_devices_message">Attention! The update will remove the favorites.</string>
    <string name="text_messages">Messages</string>
    <string name="hint_message_edit_text">Message</string>
    <string name="text_profile">My profile</string>
    <string name="text_questionaries">Voting</string>
    <string name="text_adboard">Messages</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_responses">Feedback</string>
    <string name="text_category">Category:</string>
    <string name="text_request_reason">The text of the request:</string>
    <string name="text_request_at_date">Desired date:</string>
    <string name="text_send_request">Send the request</string>
    <string name="text_send_comment">Send</string>
    <string name="text_send_progress_dialog">Sending…</string>
    <string name="text_new_request">New request</string>
    <string name="text_view_request">Request</string>
    <string name="text_title_new_comment">Create feedback</string>
    <string name="text_not_set">Not specified</string>
    <string name="text_phone_number">Phone number:</string>
    <string name="text_set_date_time">Set the correct date and time</string>
    <string name="text_set_phone_number">Set the phone number</string>
    <string name="text_answer_accepted">Thank you. Your vote is taken into account!</string>
    <string name="text_open_questionarie">Public survey, %d votes</string>
    <string name="text_private_questionarie">Private survey, votes</string>
    <string name="text_viewed">Reviewed</string>
    <string name="text_viewed_and_has_answer">Reviewed (There\'s an answer)</string>
    <string name="text_not_viewed">Not viewed</string>
    <string name="text_failed_connect_to_camera">Failed to connect to camera</string>
    <string name="text_profile_name">Apartment number:</string>
    <string name="text_profile_address">Address:</string>
    <string name="text_back_to_call">Back to call</string>
    <string name="activations_count_title">Licence:</string>
    <string name="activations_count_text">Activated: %1$d of %2$d</string>
    <string name="activation_button_text">Activate</string>
    <string name="what_is_tnect_link"><a href="http://true-ip.eu/t-nect">What is T-nect?</a></string>
    <string name="user_agreement_privacy_policy">I accept the terms of the <a href="http://true-ip.eu/contacts/o-kompanii/license-agreement">License agreement</a> and <a href="http://true-ip.eu/contacts/o-kompanii/privacy-policy">Privacy policy</a></string>
    <string name="reactivation_dialog_title">The activation code is outdated.\nPlease request the new one and enter it.</string>
    <string name="reactivation_dialog_hint">Code</string>
    <string name="text_error_inactive_server">The main server is n/a. Please contact your administrator.</string>
    <string name="text_unavailable_in_lite">This feature is available in the T-nect PRO version. Please contact your administrator.</string>
    <string name="text_foreground_service_title">T-nect is running</string>
    <string name="text_foreground_service_message">Touch for more information or to stop the app.</string>
    <string name="unknown_version">Unknown</string>
    <string name="text_error_too_many_requests">You have tried to send too many requests within short period of time. Try again later.</string>
    <string name="request_sent_info">Request is sent.</string>
    <string name="sip_number_title">SIP-number:</string>
    <string name="images_limit_text">Reached limit of images added to request</string>
    <string name="text_object_active">On</string>
    <string name="text_object_not_active">Off</string>
</resources>