<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal_grey">
    <TextView
        android:id="@+id/object_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:textSize="@dimen/text_dimen_18sp"
        android:textColor="@android:color/white"
        android:text="Title"/>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/object_address"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:textSize="@dimen/text_dimen_16sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:text="@string/reactivation_dialog_title"/>

    <EditText
        android:id="@+id/reactivation_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_15dp"
        android:hint="@string/reactivation_dialog_hint"
        android:inputType="text|textVisiblePassword"
        android:fontFamily="sans-serif"
        android:background="@drawable/drawable_reactivation_dialog_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reactivation_code"
        android:layout_margin="@dimen/dimen_15dp">
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingStart="@dimen/dimen_16dp"
            android:paddingEnd="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:background="@drawable/background_rounded_blue_radius2"
            android:textColor="@color/white"
            android:text="@string/text_ok" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/submit"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_16dp"
            android:paddingEnd="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:textAllCaps="false"
            android:background="@drawable/background_rounded_blue_radius2"
            android:textColor="@color/white"
            android:text="@string/text_cancel" />

    </RelativeLayout>
</RelativeLayout>
