<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_70dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk_is_active"
            android:layout_width="@dimen/dimen_24dp"
            android:layout_height="@dimen/dimen_24dp"
            android:button="@drawable/selector_checkbox_background"
            android:clickable="false"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/edit_icon"
            android:layout_width="@dimen/dimen_24dp"
            android:layout_height="@dimen/dimen_24dp"
            android:src="@drawable/ic_pencil"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/object_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:fontFamily="@string/roboto_regular"
            android:text="Дача"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dimen_16sp" />

        <ToggleButton
            android:id="@+id/object_enabled"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:textOn="@string/text_object_active"
            android:textOff="@string/text_object_not_active"
            android:textColor="@color/toggle_color_selector"
            android:background="@drawable/toggle_selector"/>


        <Switch
            android:id="@+id/object_enabled1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingEnd="3dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/white" />

</LinearLayout>
</layout>