<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="ru.true_ip.trueip.app.login_screen.LoginPresenter" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/charcoal_grey">
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:layout_marginStart="@dimen/dimen_50dp"
                        android:layout_marginEnd="@dimen/dimen_50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:src="@drawable/logo_trueip" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_50dp"
                    android:textSize="@dimen/dimen_16sp"
                    android:textColor="@color/white"
                    android:text="@string/text_configure_project" />

                <EditText
                    android:id="@+id/edt_flat_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_50dp"
                    android:layout_marginEnd="@dimen/dimen_50dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@drawable/background_white_border"
                    android:nextFocusDown="@id/edt_activation_code"
                    android:inputType="text"
                    android:hint="@string/text_flat_number"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_16dp"
                    android:paddingRight="@dimen/dimen_16dp"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:text="@={presenter.flatNumber}"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/dimen_16sp" />

                <TextView
                    android:id="@+id/login_number_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_marginStart="@dimen/dimen_50dp"
                    android:layout_marginEnd="@dimen/dimen_50dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:text="@string/login_number_text_error"
                    android:textColor="@color/pale_red"
                    android:textSize="@dimen/text_dimen_12sp"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/edt_activation_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_number_error"
                    android:layout_marginLeft="@dimen/dimen_50dp"
                    android:layout_marginRight="@dimen/dimen_50dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@drawable/background_white_border"
                    android:hint="@string/text_activation_code"
                    android:inputType="text|textVisiblePassword"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_16dp"
                    android:paddingRight="@dimen/dimen_16dp"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:text="@={presenter.activationCode}"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/dimen_16sp" />

                <TextView
                    android:id="@+id/login_code_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_50dp"
                    android:layout_marginEnd="@dimen/dimen_50dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:paddingStart="@dimen/dimen_8dp"
                    android:text="@string/login_code_text_error"
                    android:textColor="@color/pale_red"
                    android:textSize="@dimen/text_dimen_12sp"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_25dp"
                    android:layout_marginEnd="@dimen/dimen_25dp">

                    <ToggleButton
                        android:id="@+id/licence_agreement"
                        android:layout_width="@dimen/dimen_50dp"
                        android:layout_height="@dimen/dimen_50dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:textOff=""
                        android:textOn=""
                        android:background="@drawable/drawable_agreement_background"
                        android:foreground="?attr/selectableItemBackground"
                        android:checked="@={presenter.isAgreementAccepted}" />
                    <TextView
                        android:id="@+id/licence_agreement_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/licence_agreement"
                        android:textSize="@dimen/dimen_16sp"
                        android:textColor="@color/white"
                        android:text="@string/user_agreement_privacy_policy" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_rounded_blue_radius2"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:paddingStart="@dimen/dimen_16dp"
                    android:paddingEnd="@dimen/dimen_16dp"
                    android:onClick="@{presenter::onClicked}"
                    android:enabled="@{presenter.buttonsEnabled &amp;&amp; presenter.isAgreementAccepted}"
                    android:text="@string/text_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_16sp" />

                <Button
                    android:id="@+id/btn_configure_locally"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_5dp"
                    android:paddingBottom="@dimen/dimen_5dp"
                    android:paddingStart="@dimen/dimen_16dp"
                    android:paddingEnd="@dimen/dimen_16dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_70dp"
                    android:layout_marginBottom="@dimen/dimen_15dp"
                    android:background="@drawable/background_rounded_blue_radius2"
                    android:drawableStart="@drawable/ic_local_settings"
                    android:onClick="@{presenter::onClicked}"
                    android:text="@string/text_configure_locally"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:drawablePadding="@dimen/dimen_16dp"
                    android:enabled="@{presenter.buttonsEnabled &amp;&amp; presenter.isAgreementAccepted}"
                    android:textSize="@dimen/dimen_16sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>