<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="ru.true_ip.trueip.app.add_hlm_object_screen.AddHlmObjectPresenter" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dimen_2dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetEnd="0dp">

                <ImageView
                    android:id="@+id/btn_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="start|center_vertical"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{presenter::onClicked}"
                    android:padding="@dimen/dimen_13dp"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/charcoal_grey" />

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:background="?attr/selectableItemBackground"
                    android:enabled="@{presenter.isButtonEnabled}"
                    android:onClick="@{presenter::onClicked}"
                    android:padding="@dimen/dimen_5dp"
                    android:text="@string/text_enter"
                    android:textSize="@dimen/dimen_13sp" />

            </android.support.v7.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:elevation="@dimen/dimen_2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:text="@string/text_add_object_hlm"
                    android:textSize="@dimen/text_dimen_16sp" />

            </RelativeLayout>

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/text_settings"
            android:textColor="@color/pinkish_grey"
            android:textSize="@dimen/text_dimen_14sp" />

        <RelativeLayout
            android:id="@+id/item_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:id="@+id/text_device_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:text="@string/text_flat_number"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/text_dimen_14sp" />

            <EditText
                android:id="@+id/et_ip_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_below="@+id/text_device_type"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:background="@color/white"
                android:hint="192"
                android:nextFocusDown="@id/et_port"
                android:inputType="text"
                android:text="@={presenter.flatNumber}"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_color"
                android:textSize="@dimen/text_dimen_16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_server_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:id="@+id/text_server_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/text_activation_code"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/text_dimen_14sp" />

            <EditText
                android:id="@+id/et_port"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_below="@+id/text_server_port"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:background="@color/white"
                android:hint="XXXX-XXXX-XXXX-XXXX"
                android:inputType="text|textVisiblePassword"
                android:fontFamily="sans-serif"
                android:text="@={presenter.activationCode}"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_color"
                android:textSize="@dimen/text_dimen_16sp" />

        </RelativeLayout>
    </LinearLayout>
</layout>